# physics_TUI

./: LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  setup.py
src/: __init__.py
src/physics_TUI/: app.py  appearance.tcss  base_chapter.py  unit_converter.py
src/physics_TUI/chapters/: __init__.py  chapter10.py  chapter11.py  chapter12.py  chapter13.py  chapter14.py  chapter3.py  chapter4.py  chapter5.py  chapter6.py  chapter7.py  chapter8.py  chapter9.py
tests/: chapter3_calc_test.py  chapter3_calc_tests.py  chapter4_calc_test.py  chapter5_calc_test.py  chapter6_cal_test.py  chapter7_cal_test.py  chapter9_calc_test.py  conversion_test.py
